<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context="com.example.atish.dvt_weather_app.Help">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:fontFamily="casual"
        android:text="@string/help"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:layout_below="@+id/lblTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp">

        <TextView
            android:id="@+id/lblHelpDef"
            android:layout_width="350dp"
            android:layout_height="320dp"
            android:text="@string/helpDefinition"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </ScrollView>

    <ImageView
        android:id="@+id/imgDVT"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/imgDVT"
        app:srcCompat="@drawable/dvt" />
</RelativeLayout>
